--- a/Swampnet.Evl.Web/Views/Manage/Index.cshtml
+++ b/Swampnet.Evl.Web/Views/Manage/Index.cshtml
@@ -35,6 +35,11 @@
                 <input asp-for="PhoneNumber" class="form-control" />
                 <span asp-validation-for="PhoneNumber" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="ActiveApiKey"></label>
+                <input asp-for="ActiveApiKey" class="form-control" />
+                <span asp-validation-for="ActiveApiKey" class="text-danger"></span>
+            </div>
             <button type="submit" class="btn btn-default">Save</button>
         </form>
     </div>
