--- a/Swampnet.Evl.Web/wwwroot/css/site.css
+++ b/Swampnet.Evl.Web/wwwroot/css/site.css
@@ -33,3 +33,9 @@
         display: none;
     }
 }
+
+.search-criteria {
+    background-color: azure;
+    box-shadow: 0px 10px 10px lightgrey;
+    padding: 20px 20px;
+}
