--- a/Swampnet.Evl.Web/Views/Home/SearchResults.cshtml
+++ b/Swampnet.Evl.Web/Views/Home/SearchResults.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Swampnet.Evl.Web.Models.EventSummaryViewModel>
+﻿@model IEnumerable<Swampnet.Evl.Web.Models.HomeViewModels.EventSummaryViewModel>
 
 <table class="table">
     <thead>
