--- a/Swampnet.Evl.Web/Views/Home/SearchResults.cshtml
+++ b/Swampnet.Evl.Web/Views/Home/SearchResults.cshtml
@@ -10,6 +10,7 @@
                 @Html.DisplayNameFor(model => model.Summary)
             </th>
             <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -20,6 +21,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Summary)
+            </td>
+            <td>
+                @foreach (var tag in item.Tags.OrderBy(t => t.ToUpper()))
+                {
+                    <span class="evt-tag">@tag.ToUpper()</span>
+                }
             </td>
             <td>
                 @Html.ActionLink("Details", "Details", new { id = item.Id })
