--- a/Swampnet.Evl.Web/wwwroot/css/site.css
+++ b/Swampnet.Evl.Web/wwwroot/css/site.css
@@ -39,3 +39,12 @@
     box-shadow: 0px 10px 10px lightgrey;
     padding: 20px 20px;
 }
+
+.evt-tag {
+    background-color: lightskyblue;
+    color: black;
+    padding: 3px 5px;
+    border-radius: 5px;
+    font-size: smaller;
+    font-weight: bold;
+}
