Add rules / details page Prolly going to rip this out and use Vue

--- a/Swampnet.Evl.Web/Views/Home/SearchCriteria.cshtml
+++ b/Swampnet.Evl.Web/Views/Home/SearchCriteria.cshtml
@@ -1,4 +1,4 @@
-﻿@model Swampnet.Evl.Web.Models.HomeViewModels.EventSearchCriteriaViewModel
+﻿@model Swampnet.Evl.Web.Models.EventSearchCriteriaViewModel
 
 <div class="row">
     <div class="col-md-4">
