--- a/Swampnet.Evl.Web/Views/Rules/Index.cshtml
+++ b/Swampnet.Evl.Web/Views/Rules/Index.cshtml
@@ -1,52 +1,28 @@
-﻿@model IEnumerable<Swampnet.Evl.Web.Models.RuleSummaryViewModel>
-
-@{
+﻿@{
     ViewData["Title"] = "Rules";
 }
 
 <h2>Rules</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Id)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Order)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.IsActive)
-                </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Order)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsActive)
-            </td>
-            <td>
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
+<div id="rules">
+    {{message}}
+
+    <ul v-if="rules">
+        <li v-for="rule in rules">
+            {{ rule.id }} - {{rule.name}}
+        </li>
+    </ul>
+</div>
+
+
+@section Scripts{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js"></script>
+
+    <!-- development version, includes helpful console warnings -->
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+    <!-- production version, optimized for size and speed -->
+    @*<script src="https://cdn.jsdelivr.net/npm/vue"></script>*@
+
+    <script src="~/js/rules.js"></script>
 }
-    </tbody>
-</table>
