--- a/Swampnet.Evl.Web/Views/Home/Details.cshtml
+++ b/Swampnet.Evl.Web/Views/Home/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Swampnet.Evl.Web.Models.HomeViewModels.EventDetailsViewModel
+﻿@model Swampnet.Evl.Web.Models.EventDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
