--- a/Swampnet.Evl.Web/Views/Home/Index.cshtml
+++ b/Swampnet.Evl.Web/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 {
     <br/>
     @Html.Partial("SearchCriteria", Model.Criteria);
-    @Html.Partial("SearchResults", Model.Results);
+    @Html.Partial("SearchResults", Model);
 }
 else
 {
