--- a/Swampnet.Evl.Web/Views/Home/SearchCriteria.cshtml
+++ b/Swampnet.Evl.Web/Views/Home/SearchCriteria.cshtml
@@ -20,11 +20,11 @@
                         <input asp-for="Id" class="form-control" />
                         <span asp-validation-for="Id" class="text-danger"></span>
                     </div>
-                    <div class="form-group">
+                    @*<div class="form-group">
                         <label asp-for="Category" class="control-label"></label>
                         <input asp-for="Category" class="form-control" />
                         <span asp-validation-for="Category" class="text-danger"></span>
-                    </div>
+                    </div>*@
 
                     @*<div class="form-group">
                         <label asp-for="TimestampUtc" class="control-label"></label>
