--- a/Swampnet.Evl.Web/Views/Manage/Index.cshtml
+++ b/Swampnet.Evl.Web/Views/Manage/Index.cshtml
@@ -40,6 +40,13 @@
                 <input asp-for="ActiveApiKey" class="form-control" />
                 <span asp-validation-for="ActiveApiKey" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="TimeZone"></label>
+                <select asp-for="TimeZone" asp-items="Model.TimeZones"></select>
+                <span asp-validation-for="TimeZone" class="text-danger"></span>
+            </div>
+
+
             <button type="submit" class="btn btn-default">Save</button>
         </form>
     </div>
