--- a/Swampnet.Evl.Web/Views/Rules/Details.cshtml
+++ b/Swampnet.Evl.Web/Views/Rules/Details.cshtml
@@ -8,15 +8,21 @@
 <div id="rules">
     <div v-if="rule">
         <h2>{{rule.name}}</h2>
+        <input v-model="rule.name" />
+        <input type="checkbox" id="isRuleActive" v-model="rule.isActive">
+        <label for="isRuleActive">isActive</label>
 
-        <expression v-bind:exp="rule.expression"></expression>
+        <expression v-bind:exp="rule.expression" v-bind:rule="rule"></expression>
 
-
+        <br />
+        <h3>Actions</h3>
         <div v-for="action in rule.actions">
-            action: {{action.type}}
+            <h4>{{action.type}}</h4>
+            <input type="checkbox" id="isActionActive" v-model="action.isActive">
+            <label for="isActionActive">isActive</label>
             <div class="row" v-for="prp in action.properties">
                 <div class="col-md-2">
-                    <label>{{prp.name}}</label>
+                    <label class="property-name">{{prp.name}}</label>
                 </div>
                 <div class="col-md-10">
                     <input v-model="prp.value" />
