--- a/Swampnet.Evl.Web/Views/Rules/Index.cshtml
+++ b/Swampnet.Evl.Web/Views/Rules/Index.cshtml
@@ -26,7 +26,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id=item.Id })
             </td>
         </tr>
 }
