--- a/Swampnet.Evl.Web/Views/Rules/Details.cshtml
+++ b/Swampnet.Evl.Web/Views/Rules/Details.cshtml
@@ -9,29 +9,45 @@
     <div v-if="rule">
         <h2>{{rule.name}}</h2>
         <input v-model="rule.name" />
-        <input type="checkbox" id="isRuleActive" v-model="rule.isActive">
-        <label for="isRuleActive">isActive</label>
 
         <expression v-bind:exp="rule.expression" v-bind:rule="rule"></expression>
 
         <br />
         <h3>Actions</h3>
-        <div v-for="action in rule.actions">
-            <h4>{{action.type}}</h4>
-            <input type="checkbox" id="isActionActive" v-model="action.isActive">
-            <label for="isActionActive">isActive</label>
+        <div v-for="action in rule.actions" v-if="action.isActive">
+            <h4>
+                {{action.type}}
+                <button v-on:click="deleteAction(action)">x</button>
+            </h4>
             <div class="row" v-for="prp in action.properties">
-                <div class="col-md-2">
-                    <label class="property-name">{{prp.name}}</label>
+                <div class="col-lg-3">
+                    <label class="property-name">{{getMetaDataProperty(action.type, prp.name).description}}</label>
                 </div>
-                <div class="col-md-10">
-                    <input v-model="prp.value" />
+                <div class="col-lg-9">
+                    @* Look at meta-data properties to figure out how to display this *@
+                    <div v-if="getMetaDataProperty(action.type, prp.name).dataType == 'select'">
+                        <select v-model="prp.value">
+                            <option v-for="option in getMetaDataProperty(action.type, prp.name).options" v-bind:value="option.value">
+                                {{ option.display }}
+                            </option>
+                        </select>
+                    </div>
+                    <div v-else>
+                        <input v-model="prp.value" />
+                    </div>
                 </div>
             </div>
         </div>
 
+        <br />
+        <div>
+            <span v-for="action in rule.metaData.actionMetaData">
+                <button v-on:click="addAction(action)">{{action.type}}</button>
+            </span>
+        </div>
     </div>
 
+    <br/>
     <button v-on:click="save">Save</button>
 
     <hr />
