Display action friendly name

--- a/Swampnet.Evl.Web/wwwroot/css/site.css
+++ b/Swampnet.Evl.Web/wwwroot/css/site.css
@@ -75,3 +75,11 @@ div.evt-detail-expression-child {
 button.evt-detail-expression-delete {
     float: right;
 }
+
+button.evt-detail-action-add {
+    margin:5px;
+}
+
+button.evt-detail-save {
+    margin: 5px;
+}
