--- a/Swampnet.Evl.Web/Views/Rules/Details.cshtml
+++ b/Swampnet.Evl.Web/Views/Rules/Details.cshtml
@@ -16,18 +16,19 @@
         <h3>Actions</h3>
         <div v-for="action in rule.actions" v-if="action.isActive">
             <h4>
-                {{action.type}}
+                {{getActionMetaData(action.type).name}}
                 <button v-on:click="deleteAction(action)">x</button>
             </h4>
+            <h5>{{getActionMetaData(action.type).description}}</h5>
+            
             <div class="row" v-for="prp in action.properties">
                 <div class="col-lg-3">
-                    <label class="property-name">{{getMetaDataProperty(action.type, prp.name).description}}</label>
+                    <label class="property-name">{{getActionMetaDataProperty(action.type, prp.name).description}}</label>
                 </div>
                 <div class="col-lg-9">
-                    @* Look at meta-data properties to figure out how to display this *@
-                    <div v-if="getMetaDataProperty(action.type, prp.name).dataType == 'select'">
+                    <div v-if="getActionMetaDataProperty(action.type, prp.name).dataType == 'select'">
                         <select v-model="prp.value">
-                            <option v-for="option in getMetaDataProperty(action.type, prp.name).options" v-bind:value="option.value">
+                            <option v-for="option in getActionMetaDataProperty(action.type, prp.name).options" v-bind:value="option.value">
                                 {{ option.display }}
                             </option>
                         </select>
@@ -42,13 +43,15 @@
         <br />
         <div>
             <span v-for="action in rule.metaData.actionMetaData">
-                <button v-on:click="addAction(action)">{{action.type}}</button>
+                <button class="evt-detail-action-add" v-on:click="addAction(action)" v-bind:title="getActionMetaData(action.type).description">{{getActionMetaData(action.type).name}}</button>
             </span>
         </div>
     </div>
 
     <br/>
-    <button v-on:click="save">Save</button>
+    <button class="evt-detail-save" v-on:click="save">Save</button>
+    
+    <div v-if="isSaving">saving..</div>
 
     <hr />
     <div>
