--- a/Swampnet.Evl.Web/Views/Shared/_Layout.cshtml
+++ b/Swampnet.Evl.Web/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Rules" asp-action="Index">Rules</a></li>
+                    <li><a asp-area="" asp-controller="Keys" asp-action="Index">Keys</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                 </ul>
@@ -39,6 +40,7 @@
             </div>
         </div>
     </nav>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
